# ortools_vendor-release

./: CMakeLists.txt  Dockerfile  README.md  debian.store  ortools_vendor-extras.cmake  ortools_vendor-extras.cmake.in  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: test.yml
debian/: changelog  control  copyright  gbp.conf  rules
patches/: 0001-gscip-format-string.patch
rpm/: ros-humble-ortools-vendor.spec  ros-iron-ortools-vendor.spec  ros-rolling-ortools-vendor.spec  template.spec
