<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ortools_vendor</name>
  <version>9.9.0</version>
  <description>
    Wrapper around ortools, it provides a fixed CMake module and an ExternalProject build of it.
  </description>

  <maintainer email="gonzalo.miermunoz@wur.nl">Gonzalo Mier</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://github.com/google/or-tools</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
